+ Ripper integration. (sugg. by dbeach7 at users.sf.net)
+ Custom tags.
+ Aggregate songs. (sugg. by Pavel Avgustinov)
+ Playlist maintenance on disk. (sugg. by Pavel Avgustinov)
+ Grouping threshold in overview -> don't show group below 3 entries. 
  (sugg. by Michael Bueker)
* Mood and tempo extraction from songs?
+ ~duration
+ Integrate MPD (musicpd.org)
* Mood/CustomN/... reflection in songs?

0.94 --------------------------------------------------------------------------
+ Make the web server more visible. 
  (document on web site)
* Convey the killer features: Web server, remote control, AutoDJ.

* Add AutoDJ presets versioning.

* Revived l10n.
* Track order for playing albums. (from overview and play like songs)

* Be able to parse relative M3U files. (sugg. by Jon Burgess)
+ M3U export wizard. (Consider: relative paths, "/" path delimiter,
  DOS line endings.) (Jon Burgess)
+ Added an XDG compliant desktop file. (Fix for icon) (Jaako H Kyro)
+ Show all songs in current file's folder. (Xavier ?)
+ Filter on this field/add AND/add OR. (Adam Ward)

* ~pathname, ~filename_without_path

* Fixed problems with doubly drawn list content / Fixed BadMatch X errors.
* Continuous AutoDJ from any source.
  (sugg. by Johan Forsberg)
* Show count after letter in overview.
* Avoid automatic window resize on very long song titles.
  (sugg. by Johan Forsberg)
* See why AutoDJ was wrong with multiple selections from the same score set.
* Locking. (sugg. by Christian Hammers)
+ %title_or_filename% (sugg. by Kyoshiro)
* passive popup ending up blank?
* Fix flow of control for setFieldText to not rely on exceptions.

MAJOR CHANGES:
* Playlist management button. [done]
* Continuous AutoDJ. (Shawn, Adam Ward) [done]
+ Support FLAC. [done]
+ Support M4A. [done] (Walter King)
* Switched to Scott Wheeler's Taglib. [done]
+ New UI for current song, imitating Rhythmbox.
  I guess imitation is the sincerest form of flattery. [done]
+ Hierarchical sorting. (album, track number) [done]